--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@ body{
 }
 
 html {
-    background: url("images/travel-opportunities.jpg") no-repeat center center fixed; 
+    background: url("images/Mac Island Apple Beach Travel Background943.jpg") no-repeat center center fixed; 
     background-size: cover;
 }
 
