--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,3 @@
-body{
-    text-align:center;
-}
-
 html {
     background: url("images/Mac Island Apple Beach Travel Background943.jpg") no-repeat center center fixed; 
     background-size: cover;
@@ -9,12 +5,12 @@ html {
 
 #box{
     background-color: azure;
-    height:25em;
+    height:23em;
     width:50em;
     margin-left: auto;
     margin-right: auto;
-    margin-top:6em;
-    border-radius: 6%;
+    margin-top:3em;
+    border-radius: 25px;
     border:none;
     opacity: 0.7;
 }
@@ -22,5 +18,58 @@ html {
 
 
 #date{
-    margin-top: 50px;
+    margin-top: 2.5em;
+    text-align: center;
+}
+
+#dest_font{
+    font-family: cursive;
+    padding-top: 1em;
+    font-weight: 10em;
+}
+
+#ajax{
+    font-size: 25px;
+    font-family: sans-serif;
+    text-align: center;
+}
+
+#Adate, #Ddate{
+    font-size: 1em;
+    font-family: cursive;
+    text-align: center;
+}
+
+#A{
+    margin-top: 1em;
+    margin-bottom: 2em;
+}
+
+#header{
+    width: 60%;
+    background-color:azure;
+    height: 2.5em;
+    border-radius: 10px;
+    opacity:0.7;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#login_btn{
+    position:relative;
+    top:-2em;
+}
+
+body{
+    text-align:center;
+}
+
+#social{
+    position: relative;
+    top:-4em;
+}
+
+#submit{
+    position: relative;
+    top: -6em;
 }
